Add movies and css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>NodeAPI uppg2 DA</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Inlämningsuppgift 2</h1>
-    <p>David Almkvist</p>
+    <div>
+        <h1>Inlämningsuppgift 2</h1>
+        <p>David Almkvist</p>
+    </div>
+    <hr>
+
     <h1>Välkommen till Node API</h1>
     <p>Detta är Inlämningsuppgiften med Node Api som använder sig utav express med Node</p>
+    <ul>
+        <p>Url changes to test:</p>
+        <li><strong>/movies </strong>= To see an Json Database of movies.</li>
+        <li><strong>/joke </strong>= To get a joke from an API</li>
+        <p>To use the Swagger to see the whole List, add and remove from List, Check out the .Net API</p>
+    </ul>
 </body>
+
 </html>
